@@ -11,14 +11,18 @@ var (
 )
 
 type Field struct {
-	Name          string `config:"name"`
-	Type          string `config:"type"`
-	Description   string `config:"description"`
-	Format        string `config:"format"`
-	ScalingFactor int    `config:"scaling_factor"`
-	Fields        Fields `config:"fields"`
-	ObjectType    string `config:"object_type"`
-	Enabled       *bool  `config:"enabled"`
+	Name           string `config:"name"`
+	Type           string `config:"type"`
+	Description    string `config:"description"`
+	Format         string `config:"format"`
+	ScalingFactor  int    `config:"scaling_factor"`
+	Fields         Fields `config:"fields"`
+	MultiFields    Fields `config:"multi_fields"`
+	ObjectType     string `config:"object_type"`
+	Enabled        *bool  `config:"enabled"`
+	Analyzer       string `config:"analyzer"`
+	SearchAnalyzer string `config:"search_analyzer"`
+	Norms          bool   `config:"norms"`
 
 	path      string
 	esVersion Version
@@ -94,20 +98,37 @@ func (f *Field) keyword() common.MapStr {
 }
 
 func (f *Field) text() common.MapStr {
-	property := f.getDefaultProperties()
+	properties := f.getDefaultProperties()
 
-	property["type"] = "text"
+	properties["type"] = "text"
 
 	if f.esVersion.IsMajor(2) {
-		property["type"] = "string"
-		property["index"] = "analyzed"
-		property["norms"] = common.MapStr{
-			"enabled": false,
+		properties["type"] = "string"
+		properties["index"] = "analyzed"
+		if !f.Norms {
+			properties["norms"] = common.MapStr{
+				"enabled": false,
+			}
 		}
 	} else {
-		property["norms"] = false
+		if !f.Norms {
+			properties["norms"] = false
+		}
 	}
-	return property
+
+	if f.Analyzer != "" {
+		properties["analyzer"] = f.Analyzer
+	}
+
+	if f.SearchAnalyzer != "" {
+		properties["search_analyzer"] = f.SearchAnalyzer
+	}
+
+	if len(f.MultiFields) > 0 {
+		properties["fields"] = f.MultiFields.process("", f.esVersion)
+	}
+
+	return properties
 }
 
 func (f *Field) array() common.MapStr {
@@ -152,6 +173,16 @@ func (f *Field) addDynamicTemplate(properties common.MapStr, matchType string) {
 	dynamicTemplates = append(dynamicTemplates, template)
 }
 
+func (f *Field) getDefaultProperties() common.MapStr {
+	// Currently no defaults exist
+	property := common.MapStr{}
+	if f.Enabled != nil {
+		property["enabled"] = *f.Enabled
+	}
+
+	return property
+}
+
 // Recursively generates the correct key based on the dots
 // The mapping requires "properties" between each layer. This is added here.
 func generateKey(key string) string {
@@ -160,13 +191,4 @@ func generateKey(key string) string {
 		key = keys[0] + ".properties." + generateKey(keys[1])
 	}
 	return key
-}
-
-func (f *Field) getDefaultProperties() common.MapStr {
-	// Currently no defaults exist
-	property := common.MapStr{}
-	if f.Enabled != nil {
-		property["enabled"] = *f.Enabled
-	}
-	return property
 }
